* ZXDev/Docu/FAQ.txt

--- a/ZXDev/Docu/FAQ.txt
+++ b/ZXDev/Docu/FAQ.txt
@@ -1,6 +1,75 @@
 ﻿FAQ
 ===
 
+Q. Как создать новый проект?
+
+A. Для начала убедимся, что у нас установлена системная переменная XDev.
+Правой кнопкой на Компьютер -> Свойства -> Дополнительные параметры системы,
+кнопка Переменные среды. Системные переменные -> Создать
+
+Имя переменной: XDev
+Значение переменной: Путь_к_XDev (без пробелов). Например: d:\Projects\XDev
+
+Это в Windows 7. В других - по аналогии.
+
+  - Создаём папку для проекта (где угодно).
+
+  - Создаём и сохраним в корне папки проекта (или в подпапке /Mod)
+главный модуль, который будет выглядеть примерно так:
+
+MODULE MyProj; (*$MAIN*)
+END MyProj.
+
+  - Откроем его в XDev, выберем из меню XDev => ZXDev Project Setup,
+настроим свойства проекта (или оставим их без изменений), сохраним
+(кнопка Save). Среда создаст папку Bin и сборочные скрипты.
+
+    - Адреса данных и кода должны быть разумными, иначе SDCC заругается.
+    - Target сейчас бывает только TAP и REM, остальные в планах.
+    - Главный модуль задаётся в поле Main Module без .rel и без .Mod, просто имя.
+    - Не главные модули, напротив, перечислены: имя.rel, главный же модуль
+в этот список НЕ входит.
+    - Свойства Include и Libraries, скорее всего, не понадобятся вам ещё долго.
+    - Поле SDCC Options вам, скорее всего, тоже вряд ли понадобится очень скоро.
+Может понадобиться опция --reserve-regs-iy, которая запрещает SDCC занимать
+регистр IY для любых применений, иногда это может быть полезно.
+    - Поле Ofront+.par позволяет задать свойства транслятора Оберона в Си.
+Например, можно смешивать пять разных диалектов в одном проекте. Пример:
+
+      -s3 -21 Main.Mod -2 MyMod.Mod -C Mod7.Mod -7
+
+        -s это указание разрешения перегенерировать символьники
+        -3 это диалект Оберона, в данном случае Оберон-3
+        -21 это задание размера адреса (2 байта) и логического типа SET (1 байт)
+        Main на Обероне-2, MyMod на Компонентном Паскале, а Mod7 - на Обероне-07
+        (подробнее об этих опциях смотрите в документации по Ofront)
+
+    - Run это запуск собранной программы в эмуляторе, ассоциированном
+с расширением .tap
+    - Clean это уборка, удаление временных файлов, нужных для сборки проекта.
+
+  - Например, добавим к нашей программе библиотеку Basic. Для этого
+создадим в папке проекта подпапку Sym и перенесём в неё файл
+ZXDev/Lib/Sym/Basic.sym
+
+MODULE MyProj; (*$MAIN*)
+IMPORT b := Basic;
+BEGIN
+  b.BORDER(b.Yellow)
+END MyProj.
+
+  - Для многомодульного проекта надо перечислить все модули в поле Module.
+И указать, какой из них главный (Main Module).
+
+  - Ну и ещё могут быть другие тонкости, скажем, с режимом работы нашей
+программы (DI, IM 1, IM 2) - это конфигурируется в специальных конфигах.
+Для конфигурирования библиотеки Basic нужно положить в Obj или в Lib/Obj
+файл BasicCfg.h. Файл XDevCfg.h тоже нужен. Если их не положить - будут
+использованы конфигурационные файлы по умолчанию. То есть, их есть смысл
+использовать, если конфигурация проекта отличается от дефолтной.
+
+--------------------------------------------------------------------------------
+
 Q. Как написать свой модуль на ассемблере?
 
 A. Модуль на ассемблере выглядит так же, как и не на ассемблере. На уровне
