* ZXDev/Docu/FAQ.txt

--- a/ZXDev/Docu/FAQ.txt
+++ b/ZXDev/Docu/FAQ.txt
@@ -1,6 +1,27 @@
 ﻿FAQ
 ===
 
+Q. Информационная поддержка ZXDev. Куда задавать вопросы?
+
+A. Есть форум: http://zx.oberon2.ru/forum/viewforum.php?f=10
+   Есть группа в Телеграм: t.me/zxdev_masters
+
+--------------------------------------------------------------------------------
+
+Q. Где можно ознакомиться с функциями, ключевыми словами и вообще синтаксисом
+как для самого Оберона, так и для подключаемых библиотек, например, с Бейсиком
+(которые IMPORT B := Basic)?
+
+A. Оберона - читайте приложенные доки в ZXDev/Docu - например, o2rus.mht,
+конечно не учебник, но кое-что. Есть торрент-раздача книг и статей по Оберону:
+http://nnmclub.to/forum/viewtopic.php?t=746187
+
+Библиотеки находятся в ZXDev/Lib. Чтобы узнать какие именно есть процедуры,
+константы и типы - выделите мышкой название библиотеки (дабл кликом) и выберите
+из меню XDev -> Show Definition
+
+--------------------------------------------------------------------------------
+
 Q. Как создать новый проект?
 
 A. Для начала убедимся, что у нас установлена системная переменная XDev.
@@ -110,3 +131,5 @@ A. Главный наш модуль:
 То есть если надо какой-то модуль сделать главным, пишем в нём (*$MAIN*),
 добавляем его имя в Main Module и убираем из Modules, если он там конечно был.
 И обязательно нажимаем Save.
+
+--------------------------------------------------------------------------------
