* ZXDev/Docu/FAQ.txt

--- a/ZXDev/Docu/FAQ.txt
+++ b/ZXDev/Docu/FAQ.txt
@@ -22,6 +22,24 @@ http://nnmclub.to/forum/viewtopic.php?t=746187
 
 --------------------------------------------------------------------------------
 
+Q. Типы переменных: почему у меня не получилось, например, скомпилировать 
+"FOR x := 0 TO 7 BY 1 DO B.BORDER (x);B.CLS",
+когда x был переменной типа INTEGER и SHORTINT, но получилось с типом BYTE?
+
+A. Оберон требует явной инструкции SHORT для уменьшения мощности числового типа,
+чтобы было видно, где именно возможны потери разрядности.
+
+  Для SHORTINT {-32768..32767} нужно так: B.BORDER (SHORT(x))
+  Для INTEGER {-2147483648..2147483647} нужно так: B.BORDER (SHORT(SHORT(x)))
+
+Заметьте, эти усечения мощности типа действительно несут накладные расходы.
+В Си это маскируется, в Обероне же нужно прописывать явно.
+
+Типами INTEGER и LONGINT пользоваться вообще не советую - они неэффективны
+на Z80. Хотя INTEGER может иметь смысл в некоторых случаях.
+
+--------------------------------------------------------------------------------
+
 Q. Как создать новый проект?
 
 A. Для начала убедимся, что у нас установлена системная переменная XDev.
