* ZXDev/Docu/FAQ.txt

--- a/ZXDev/Docu/FAQ.txt
+++ b/ZXDev/Docu/FAQ.txt
@@ -8,6 +8,25 @@ A. Есть форум: http://zx.oberon2.ru/forum/viewforum.php?f=10
 
 --------------------------------------------------------------------------------
 
+Q. Как установить ZXDev?
+
+A. Скачайте архив https://github.com/Oleg-N-Cher/XDev/archive/master.zip
+Распакуйте его в папку так, чтобы в пути не было пробелов. Это всё.
+Запускайте файл XDev.exe, далее открывайте примеры: File -> Open -> ZXDev/Mod
+Скомпилировать: F11, собрать и запустить в эмуляторе по умолчанию: F12
+
+Чтобы иметь возможность сохранять проекты в любом месте, а не только в ZXDev/Mod
+убедимся, что у нас установлена системная переменная XDev.
+Правой кнопкой на Компьютер -> Свойства -> Дополнительные параметры системы,
+кнопка Переменные среды. Системные переменные -> Создать
+
+Имя переменной: XDev
+Значение переменной: Путь_к_XDev (без пробелов). Например: d:\Projects\XDev
+
+Это в Windows 7. В других - по аналогии.
+
+--------------------------------------------------------------------------------
+
 Q. Где можно ознакомиться с функциями, ключевыми словами и вообще синтаксисом
 как для самого Оберона, так и для подключаемых библиотек, например, с Бейсиком
 (которые IMPORT B := Basic)?
@@ -16,9 +35,9 @@ A. Оберона - читайте приложенные доки в ZXDev/Docu
 конечно не учебник, но кое-что. Есть торрент-раздача книг и статей по Оберону:
 http://nnmclub.to/forum/viewtopic.php?t=746187
 
-Библиотеки находятся в ZXDev/Lib. Чтобы узнать какие именно есть процедуры,
-константы и типы - выделите мышкой название библиотеки (дабл кликом) и выберите
-из меню XDev -> Show Definition
+Библиотеки находятся в ZXDev/Lib. Чтобы узнать, какие именно есть процедуры,
+константы и типы - смотрите интерфейсы ZXDev/Lib/Mod/*.Def или выделите мышкой
+название библиотеки (дабл кликом) и выберите из меню XDev -> Show Definition
 
 --------------------------------------------------------------------------------
 
@@ -43,13 +62,7 @@ A. Оберон требует явной инструкции SHORT для ум
 Q. Как создать новый проект?
 
 A. Для начала убедимся, что у нас установлена системная переменная XDev.
-Правой кнопкой на Компьютер -> Свойства -> Дополнительные параметры системы,
-кнопка Переменные среды. Системные переменные -> Создать
-
-Имя переменной: XDev
-Значение переменной: Путь_к_XDev (без пробелов). Например: d:\Projects\XDev
-
-Это в Windows 7. В других - по аналогии.
+Смотрите ответ на вопрос "Как установить ZXDev?"
 
   - Создаём папку для проекта (где угодно).
 
